--- a/assets/locales/locale.en.json
+++ b/assets/locales/locale.en.json
@@ -16,7 +16,8 @@
         "edit-manga": "Manga Editing"
     },
     "dashboard/index.php": {
-        "title": "Manga Reader<br/><small>Dashboard</small>",
+        "title": "Manga Reader Dashboard",
+        "page-header": "Manga Reader<br/><small>Dashboard</small>",
         "select-account": "Please select an account to access the dashboard.",
         "sign-in-twitter": "Sign in with Twitter",
         "alert-title": "Warning!",
