--- a/assets/locales/locale.en.json
+++ b/assets/locales/locale.en.json
@@ -1,4 +1,42 @@
 {
+    "tags": {
+        "cat-action": "Action",
+        "cat-mystery": "Mystery",
+        "cat-adult": "Adult",
+        "cat-psychological": "Psychological",
+        "cat-adventure": "Adventure",
+        "cat-romance": "Romance",
+        "cat-comedy": "Comedy",
+        "cat-school-life": "School Life",
+        "cat-doujinshi": "Doujinshi",
+        "cat-sci-fi": "Sci-fi",
+        "cat-drama": "Drama",
+        "cat-seinen": "Seinen",
+        "cat-shotacon": "Shotacon",
+        "cat-ecchi": "Ecchi",
+        "cat-shoujo": "Shoujo",
+        "cat-fantasy": "Fantasy",
+        "cat-gender-bender": "Gender Bender",
+        "cat-shoujo-ai": "Shoujo Ai",
+        "cat-shounen": "Shounen",
+        "cat-harem": "Harem",
+        "cat-hentai": "Hentai",
+        "cat-shounen-ai": "Shounen Ai",
+        "cat-historical": "Historical",
+        "cat-slice-of-life": "Slice of Life",
+        "cat-horror": "Horror",
+        "cat-smut": "Smut",
+        "cat-sports": "Sports",
+        "cat-josei": "Josei",
+        "cat-lolicon": "Lolicon",
+        "cat-supernatural": "Supernatural",
+        "cat-tragedy": "Tragedy",
+        "cat-martial-arts": "Martial Arts",
+        "cat-mature": "Mature",
+        "cat-yaoi": "Yaoi",
+        "cat-mecha": "Mecha",
+        "cat-yuri": "Yuri"
+    },
     "reader.php": {
         "help-title": "Manga Reader Help",
         "help-content": "On a computer:<br/>press arrow keys or click on page corners to turn pages,<br/>click on the page to activate zoom<br>On a mobile:<br/>tap on page corners to turn pages and double-tab to activate zoom.",
