--- a/assets/locales/locale.it.json
+++ b/assets/locales/locale.it.json
@@ -1,4 +1,42 @@
 {
+    "tags": {
+        "cat-action": "Azione",
+        "cat-mystery": "Mistero",
+        "cat-adult": "Adulti",
+        "cat-psychological": "Psicologico",
+        "cat-adventure": "Avventura",
+        "cat-romance": "Sentimentale",
+        "cat-comedy": "Commedia",
+        "cat-school-life": "Scolastico",
+        "cat-doujinshi": "Doujinshi",
+        "cat-sci-fi": "Sci-fi",
+        "cat-drama": "Drama",
+        "cat-seinen": "Seinen",
+        "cat-shotacon": "Shotacon",
+        "cat-ecchi": "Ecchi",
+        "cat-shoujo": "Shoujo",
+        "cat-fantasy": "Fantasy",
+        "cat-gender-bender": "Gender Bender",
+        "cat-shoujo-ai": "Shoujo Ai",
+        "cat-shounen": "Shounen",
+        "cat-harem": "Harem",
+        "cat-hentai": "Hentai",
+        "cat-shounen-ai": "Shounen Ai",
+        "cat-historical": "Storico",
+        "cat-slice-of-life": "Slice of Life",
+        "cat-horror": "Orrore",
+        "cat-smut": "Smut",
+        "cat-sports": "Sportivo",
+        "cat-josei": "Josei",
+        "cat-lolicon": "Lolicon",
+        "cat-supernatural": "Sopranaturale",
+        "cat-tragedy": "Tragedia",
+        "cat-martial-arts": "Arti Marziali",
+        "cat-mature": "Maturi",
+        "cat-yaoi": "Yaoi",
+        "cat-mecha": "Mecha",
+        "cat-yuri": "Yuri"
+    },
     "reader.php": {
         "help-title": "Manga Reader Help",
         "help-content": "Su un computer:<br>premere i tasti cursore o cliccate sugli angoli per girare le pagine,<br>cliccate nella pagina per attivare lo zoom<br>Su un mobile:<br>premete sugli angoli per girare le pagine e usate una doppia pressione per attivare lo zoom.",
