localized index.php

--- a/assets/locales/locale.it.json
+++ b/assets/locales/locale.it.json
@@ -37,6 +37,11 @@
         "cat-mecha": "Mecha",
         "cat-yuri": "Yuri"
     },
+    "index.php": {
+        "title": "Libreria Manga Reader",
+        "filters": "Filtri",
+        "sort": "Ordinamento"
+    },
     "reader.php": {
         "help-title": "Manga Reader Help",
         "help-content": "Su un computer:<br>premere i tasti cursore o cliccate sugli angoli per girare le pagine,<br>cliccate nella pagina per attivare lo zoom<br>Su un mobile:<br>premete sugli angoli per girare le pagine e usate una doppia pressione per attivare lo zoom.",
