--- a/assets/locales/locale.en.json
+++ b/assets/locales/locale.en.json
@@ -37,6 +37,11 @@
         "cat-mecha": "Mecha",
         "cat-yuri": "Yuri"
     },
+    "index.php": {
+        "title": "Manga Reader BookShelf",
+        "filters": "Filter",
+        "sort": "Sort"
+    },
     "reader.php": {
         "help-title": "Manga Reader Help",
         "help-content": "On a computer:<br/>press arrow keys or click on page corners to turn pages,<br/>click on the page to activate zoom<br>On a mobile:<br/>tap on page corners to turn pages and double-tab to activate zoom.",
