--- a/assets/locales/locale.it.json
+++ b/assets/locales/locale.it.json
@@ -46,7 +46,8 @@
         "help-title": "Manga Reader Help",
         "help-content": "Su un computer:<br>premere i tasti cursore o cliccate sugli angoli per girare le pagine,<br>cliccate nella pagina per attivare lo zoom<br>Su un mobile:<br>premete sugli angoli per girare le pagine e usate una doppia pressione per attivare lo zoom.",
         "title": "Manga Reader",
-        "esc-tip": "Premi ESC per uscire"
+        "esc-tip": "Premi ESC per uscire",
+        "bookshelf": " ritorna alla Libreria"
     },
     "dashboard/dashboard.php": {
         "manga-title-label": "Titolo",
